--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "books",
+  "name": "redux-starter",
   "version": "1.0.0",
-  "description": "Simple search youtube",
+  "description": "Simple redux starter",
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open ",
@@ -23,7 +23,6 @@
     "react": "15.6.1",
     "react-dom": "15.6.1",
     "react-redux": "^5.0.5",
-    "redux": "^3.7.1",
-    "youtube-api-search": "0.0.5"
+    "redux": "^3.7.1"
   }
 }
