--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "redux-devtools-extension": "^2.13.2",
     "redux-logger": "^3.0.6",
     "webpack": "3.0.0",
     "webpack-dev-server": "2.5.0"
